<resources>
    <string name="app_name">Dir5_3</string>
    <string name="btn_top">위쪽</string>
    <string name="btn_bottom">아래</string>
    <string name="btn_left">좌측</string>
    <string name="btn_right">우측</string>
    <string name="btn_center">중앙</string>
    <string name="btn_base">기준위젯</string>
    <string name="btn_1">1번</string>
    <string name="btn_2">2번</string>
    <string name="btn_3">3번</string>
    <string name="btn_4">4번</string>
    <string name="btn_5">5번</string>
    <string name="btn_6">6번</string>
    <string name="btn_7">7번</string>
    <string name="base_btn1">기준1</string>
    <string name="base_btn2">기준2</string>
    <string name="text_phone">전화번호</string>
    <string name="edit_hint">000-0000-0000</string>
    <string name="btn_input">입력</string>
    <string name="btn_cancel">취소</string>
</resources>