<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_base"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:text="@string/btn_base"
        />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btn_base"
        android:layout_toLeftOf="@id/btn_base"
        android:text="@string/btn_1"
        />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_base"
        android:layout_toLeftOf="@id/btn_base"
        android:text="@string/btn_2"
        />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btn_base"
        android:layout_toLeftOf="@id/btn_base"
        android:text="@string/btn_3"
        />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_base"
        android:layout_above="@+id/btn_base"
        android:text="@string/btn_4"
        />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_base"
        android:layout_alignRight="@id/btn_base"
        android:text="@string/btn_5"
        />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_base"
        android:layout_toRightOf="@id/btn_base"
        android:text="@string/btn_6"
        />
    <Button
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_base"
        android:layout_toRightOf="@id/btn_base"
        android:text="@string/btn_7"
        />
</RelativeLayout>